---------------------------------------------------------------------------------------------------
Version: 0.9.10
Date: 28. 03. 2019
  Changed:
    - Added Thaumaturgic Machinations to list of incompatible mods
---------------------------------------------------------------------------------------------------
Version: 0.9.9
Date: 25. 03. 2019
  Changed:
    - Added support for new pollution model introduced in 0.17.12
  Locales:
    - Updated German translation (thanks to lpzockerx and LastDawn)
    - Updated Spanish translation (thanks to notallme)
---------------------------------------------------------------------------------------------------
Version: 0.9.8
Date: 19. 03. 2019
  Added:
    - Lawnmower can now be used to remove corpses by invoking alternate selection mode (by default, by holding down SHIFT key when selecting an area)
    - New setting to adjust walking and vehicle speeds of Painted concrete by a custom amount, allowing concrete to be used as a safety barrier around hazards (by default, this option is off)
  Locales:
    - Updated German translation (thanks to LastDawn)
    - Updated Spanish translation (thanks to notallme)
    - Updated Portuguese, Brazilian translation (thanks to celaquila)
---------------------------------------------------------------------------------------------------
Version: 0.9.7
Date: 14. 03. 2019
  Bugfixes:
    - Fixed a migration issue when loading old saves with the Alien Biomes mod present
---------------------------------------------------------------------------------------------------
Version: 0.9.6
Date: 12. 03. 2019
  Added:
    - Support for placing rocks and trees when using Alien Biomes mod
    - Base Landfill will place as dirt rather than grass
  Removed:
    - Removed custom Landfill tile as 0.17.10 adds this to the base game, existing tiles will be migrated
  Bugfixes:
    - Fixes compatibility with version 4 of Alien Biomes mod
  Locales: